# phpdesktop

./: !BEFORE NEXT RELEASE TODO.txt  !BEFORE-RELEASE.txt  .gitattributes  .gitignore  CEF.Readme.txt  CMakeLists.txt  Contributing.md  DownloadCEF.cmake  Info.plist.in  License.txt  MainMenu.xib  Makefile  README.md  README.pl.md  README.txt  app.cpp  app.h  build-php-mysqli-pgsql.sh  build-php-with-ext.sh  build-php.sh  build.sh  buildandrun.sh  buildiconv.sh  buildjpeg.sh  buildonig.sh  buildopenssl.sh  buildphp.sh  buildpng.sh  buildsqlite.sh  buildxml.sh  buildzlib.sh  cleanbuild.sh  client.cpp  client.h  defines.h  dpi_aware.cpp  helper-Info.plist.in  helper.cpp  icon.icns  json.c  (+27 more)
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md
cef/: app.cpp  app.h  browser_window.cpp  browser_window.h  client_handler.cpp  client_handler.h  devtools.cpp  fullscreen.cpp  javascript_api.cpp  javascript_api.h
cef/include/: cef_color_ids.h  cef_command_ids.h  cef_config.h  cef_pack_resources.h  cef_pack_strings.h  cef_version.h
examples/: install-print-service.php  printer-server.php
examples/create-windows-print-service/: README.md  index.php  printer-server.php  remove-print-service.php
mongoose-rev-04fc209/: mongoose.c
mongoose-test/: .gitignore  defines.h  executable.cpp  main.cpp  mongoose-test.vcxproj  string_utils.h
mongoose-test/mongoose-test/: main.cpp
php/: !README.txt
phpdesktop-chrome/: .gitignore  LICENSE.txt  RequireAdministrator.manifest  debug.cpp  debug.h  defines.h  dpi_aware.cpp  dpi_aware.h  executable.cpp  executable.h  fatal_error.cpp  fatal_error.h  file_utils.cpp  file_utils.h  license.txt  logging.cpp  logging.h  main.cpp  main.h  main_window.cpp  main_window.h  mongoose.c  mongoose.h  php_server.cpp  phpdesktop-chrome.vcxproj  popup_window.cpp  popup_window.h  resource.rc  settings.cpp  settings.h  settings.json  single_instance_application.h  string_utils.cpp  string_utils.h  version.cpp  version.h  web_server.cpp  web_server.h  window_utils.cpp  window_utils.h
phpdesktop-chrome-cef1750/: dpi_aware.h  fatal_error.cpp  logging.cpp  main.cpp  mongoose.c  popup_window.h  resource.rc  settings.json
phpdesktop-chrome-cef1750/cef/: README.txt  client_handler.cpp  client_handler.h  devtools.cpp
phpdesktop-chrome-cef2171/: dpi_aware.cpp  main.cpp  resource.rc  settings.json  web_server.cpp
phpdesktop-chrome-cef2171/cef/: app.cpp  devtools.cpp
phpdesktop-chrome-cef2171/php/: php.ini
phpdesktop-chrome-cef2171/www/: blenc_myscript.php  blenc_readme.txt  forms.php  open-folder-in-explorer.php  upload.php
phpdesktop-chrome/cef/: app.cpp  app.h  browser_window.cpp  browser_window.h  client_handler.cpp  client_handler.h  devtools.cpp  devtools.h  javascript_api.cpp  javascript_api.h
phpdesktop-chrome/php/: !README.txt  php.ini
phpdesktop-chrome/www/: _pdo.php  blenc_encode.php  execute-command.php  index.php  loading-error.php  open-folder-in-explorer.php  popup.php  pretty-urls.php  session.php  sqlite.php  system-command.php  temp-dir.php  upload.php
phpdesktop-chrome39/: dpi_aware.cpp  file_utils.h  log.h  main.cpp  phpdesktop-chrome.vcxproj  resource.rc  temp_dir.cpp  web_server.cpp  window_utils.h
phpdesktop-chrome39/cef/: README.txt  browser_window.cpp  client_handler.cpp
phpdesktop-chrome39/www/: blenc_myscript.php  cookies.php  env-variables.php  error-500.php  execute-command.php  google.php  html5-video.php  javascript-api.php  no-cache.php  php-error.php  pretty-urls.php  request-quota.php  speech-recognition.php  upload.php
phpdesktop-chrome47/: RequireAdministrator.manifest  file_utils.cpp  main.cpp  phpdesktop-chrome.vcxproj  resource.rc  settings.json  web_server.cpp  web_server.h
phpdesktop-chrome47/cef/: app.cpp  browser_window.cpp  browser_window.h  client_handler.cpp
phpdesktop-chrome47/www/: blenc_encode.php  blenc_myscript.php  download.php  error-404.php  no-cache.php  php-error.php
phpdesktop-chrome57/: dpi_aware.cpp  license.txt
phpdesktop-chrome57/cef/: app.cpp
phpdesktop-chrome57/php/: php.ini
phpdesktop-chrome57/www/: cookies.php  env-variables.php  ob-flush.php  popup.php  request-quota.php  session.php  sqlite.php
phpdesktop-msie/: .gitignore  DEBUG.h  ExecutablePath.h  MainFrame.h  MainView.h  PhpServer.h  _before_release.txt  before-release.txt  before_release.txt  debug.cpp  debug.h  defines.h  executable.cpp  executable.h  fatal_error.cpp  fatal_error.h  file_utils.cpp  file_utils.h  json.h  license.txt  log.h  main.cpp  main.h  main_frame.h  mongoose.c  mongoose.h  php_server.cpp  php_server.h  phpdesktop-msie.sln  phpdesktop-msie.vcproj  phpdesktop-msie.vcxproj  phpdesktop-msie.vcxproj.filters  popup_frame.h  registry.cpp  registry.h  resource.h  resource.rc  run.js  settings.cpp  settings.h  (+16 more)
phpdesktop-msie/WebBrowser/: ClickEvents.h  DocHostUIHandlerDispatch.h  FullScreenFrame.h  HTMLOMWindowServices.h  IEVersion.h  InternetFeatures.h  InternetSecurityManager.h  OleClientSite.h  OleInPlaceFrame.h  OleInPlaceSite.h  ServiceProvider.h  SubmitEvents.h  WebBrowserFrame.h  WebBrowserFrameInterface.h  keycodes.h
phpdesktop-msie/msie/: browser_events2.cpp  browser_events2.h  browser_frame.h  browser_frame_interface.h  browser_window.cpp  browser_window.h  click_events.cpp  click_events.h  com_utils.h  doc_host_show_ui.cpp  (+34 more)
src/: .gitattributes  .gitignore  AUTHORS.txt  app.cpp  app.h  client_handler.cpp  client_handler.h  defines.h  dialog_handler_gtk.cpp  dialog_handler_gtk.h  dpi_aware.cpp  file_utils.h  gtk.cpp  gtk.h  json.c  license.txt  main.cpp  main.h  main_message_loop.cpp  main_message_loop.h  main_message_loop_std.cpp  main_message_loop_std.h  main_window.cpp  main_window.h  mongoose.c  mongoose.h  mongoose_server.cpp  mongoose_server.h  php.ini  phpdesktop-chrome.sln  phpdesktop-chrome.vcxproj  phpdesktop-msie.sln  print_handler_gtk.cpp  print_handler_gtk.h  random.cpp  random.h  registry.cpp  resource.h  resource.rc  settings.cpp  (+10 more)
var/: pdo.php
www/: dialogs.php  execute-command.php  forms.php  index.php  openssl.php  php-error.php  popup.php  style.css  upload.php
(+106 files in other folders)
